--- a/spearman.tt
+++ b/spearman.tt
@@ -7,22 +7,21 @@
 /session $myname main.fengyun6666.com 6666
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
-/act {^请选择您使用的内码}{0}
-/act {^您的英文名字：} {$myname}
+/ac {^请选择您使用的内码}{0}
+/ac {^您的英文名字：} {$myname}
 /al reload {/read spearman.tt}
 /ac {此英文名字已被使用，请输入此帐号的密码}{Sea123}
 /ac {^请敲回车键［ＲＥＴＵＲＮ］}{/cr; /ticker {noidle}{tu;}{280}}
 /ac {^重新连线完毕。}{/cr; /ticker {noidle}{tu;}{280};resethb}
 /ac {^#SESSION '%0' DIED.}{/read %0.tin}
 /ac {^#SESSION '%0' ACTIVATED.}{/read %0.tin}
-/ac {^  帝王谷%0护士(Nurse)}{give nurse silver;tget 30 silver;}
 /al enablemove {enable move anxiang-steps}
 /al movenone {enable move none}
 /al jd {th jd $myname}
 /al wim {wield jade}
 /al phl {/var henglian 0;stat;/delay {1}{/if {$henglian == 0}{perform iron-cloth.yichuan}}}
 /al buff {wim;jjjj;exert youdishenru; phl}
-/al ki {set target %0;buff; /delay {1}{kill %0}}
+/al ki {set target %0;buff; /delay {2}{kill %0}}
 /al akinit {
     /al ak0 {};
     /al ak1 jjk;
@@ -31,11 +30,12 @@
     /al ak4 jk;
     /al ak5 j
 }
-/al kkk {ak0;ak1;ak2;ak3;ak4;ak5};
+/nop al kkk {ak0;ak1;ak2;ak3;ak4;ak5};
 /ac {%0如同遭到电击，全身刺痛}{/al ak1 {/echo 已经中标 }; /delay {18}{/al ak1 j}}
 /ac {^对手已经中了你的『金石为开』}{k}
 /al startk {nwlk;akinit;iskill;wim;kkk; /ticker {kill} {kkk} {5}}
-/al startk {nwlk;wi spear;iskill;k;/ticker {kill} {k} {5}}
+/al k {perform lixuegandan}
+/al startk {nwlk;wi spear;iskill;k;/ticker {kill} {k} {4.3}}
 /al stopk {/unticker {kill};nokill;akinit}
 /ac {^你对著%0！今日不是你死就是我活！} {iskill;startk; /var killlosttime 0;}
 /ac {^你对著%0说道：在下%1，领教壮士的高招！}{iskill;kk;startk}
@@ -62,6 +62,7 @@
 /read comm/team/teamb.sc
 /read comm/quest.sc
 /read comm/status.sc
+/read comm/autorecover.sc
 /al hxdazuo {exercise 300;hh; /delay {2.1}{dazuo}}
 /ac {^你的真气不够。}{/if {$is_kill==0 && $is_walk==0}{exercise 500;hn}}
 /al getitem {
@@ -75,5 +76,3 @@ retrieve 1843;
 remove all;
 wear all
 }
-/al eatall {eat mantou;/delay {3}{drink hulu}}
-/read comm/autorecover.sc
