--- a/spearman.tt
+++ b/spearman.tt
@@ -1,20 +1,14 @@
 #config {TINTIN CHAR} /
 /var myname spearman
 /var myname_cn 枪
+/var passwd Sea123
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname fy.hbisp.com 3333
 /nop session $myname fy.sysfon.com 6000
 /session $myname main.fengyun6666.com 6666
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
-/ac {^请选择您使用的内码}{0}
-/ac {^您的英文名字：} {$myname}
-/al reload {/read spearman.tt}
-/ac {此英文名字已被使用，请输入此帐号的密码}{Sea123}
-/ac {^请敲回车键［ＲＥＴＵＲＮ］}{/cr; /ticker {noidle}{tu;}{280}}
-/ac {^重新连线完毕。}{/cr; /ticker {noidle}{tu;}{280};resethb}
-/ac {^#SESSION '%0' DIED.}{/read %0.tin}
-/ac {^#SESSION '%0' ACTIVATED.}{/read %0.tin}
+/read comm/login.sc
 /al enablemove {enable move anxiang-steps}
 /al movenone {enable move none}
 /al jd {th jd $myname}
