--- a/healer.tt
+++ b/healer.tt
@@ -24,12 +24,12 @@
 /al enablemove {enable move nodust-steps}
 /al movenone {enable move none}
 /al jd {th jd $myname}
-/al wim {wield jade;wi staff}
+/al wim {wield jade}
 /nop al buff {perform dodge.wuwuwuwo $myname}
 /al buff {enablemove;wim}
 /al buff {wim}
 /al jj {conjure void_sense}
-/al ki {set target %0;wim;buff;/delay {1}{kill %0;jj}}
+/al ki {set target %0;wim;buff;/delay {0.5}{kill %0;jj}}
 /nop al ki {set target %0;wim;buff;/delay {1}{kill %0;k}}
 /al kkk {jj;j;k}
 /al ks {jj;j;jk}
@@ -43,8 +43,8 @@
 }
 /al startk {buff;nwlk;iskill;wim;jj;kkk;/ticker {kill} {kkk} {4}}
 /al k {perform longxianyuye}
-/al busy_p {k}
-/al tickk {/ticker {kill} {jj} {4.4}}
+/al busy_p {k;tickk}
+/al tickk {/ticker {kill} {jj} {4.3}}
 /al startk {nwlk;iskill;jj;tickk}
 /al startk {tickk}
 /al startks {buff;nwlk;iskill;wim;jj;ks;/ticker {kill} {ks} {4}}
@@ -53,8 +53,8 @@
 /ac {^你对著%0！今日不是你死就是我活！} {iskill;startk;}
 /ac {^你对著%0说道：在下%1，领教壮士的高招！}{iskill;kk;startk}
 /ac {^一时之间，}{jj}
-/ac {^敌人已经中招了}{kk}
-/ac {^你低呼佛号，内力聚于双臂}{de2 tickk}
+/ac {^敌人已经中招了}{;}
+/ac {^你低呼佛号，内力聚于双臂}{de4 tickk}
 /nop ac {^坦克使出短歌刀法}{kk}
 /ac {^『千手千变』只能对战斗}{stopk;cks}
 /ac {^『龙现于野』只能对}{stopk;tcks}
@@ -80,9 +80,7 @@
 /ac {^【谣言】} {/line log ../mudlog/fy-chat.log}{plain}
 /ac {^【闲聊】%0(%1)}{/var temp1 %0;/if {"$temp1" == "天机老人"}{uptime_do;uptimedo l}{/line log ../chat-$myname.log }{plain}}
 /al jjj {exert douzhansheng}
-/ac {^( 你似乎十分疲惫，看来需要好好休息了}{hh}
-/ac {^( 你头重脚轻，正在勉力支撑)}{pausek;hh;/delay {1}{hh};/delay {3}{hh}}
-/ac {^( 你摇头晃脑、歪歪斜斜}{pausek;hh;/delay {1}{hh};/delay {3}{hh;cks}}
+/ac {^( 你摇头晃脑、歪歪斜斜}{pausek;jjj;hh;/delay {1}{jjj;hh};/delay {3}{jjj;hh;cks}}
 /ac {^( 你已经陷入半昏迷状态}{pausek;jjj;hh;/delay {1}{jjj;hh};/delay {3}{jjj;hh;cks}}
 /al hxdazuo {exercise 300;hh;/delay {2.1}{dazuo}}
 /al hx {exert gheal}
